--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -7,13 +7,34 @@
     YEAR        = {2002},
 }
 
+@CONFERENCE
+{
+    BlueGeneL2002,
+    AUTHOR    = {N. R. Adiga and others},
+    TITLE     = {{An Overview of the BlueGene/L Supercomputer}},
+    BOOKTITLE = {Proceedings of Supercomputing 2002},
+    ADDRESS   = {Baltimore, MD},
+    YEAR      = {2002},
+    NOTE      = {Available from http://sc-2002.org/paperpdfs/pap.pap207.pdf},
+}
+
 @MISC
 {
-    BlueGene2002, 
+    BlueGene2002,
     AUTHOR      = {{{Lawrence Livermore National Laboratory}}},
     TITLE       = {{Blue/GeneL}},
     HOWPUBLISHED= {http://www.llnl.gov/asci/platforms/bluegenel},
     YEAR        = {2003},
+}
+
+
+@MISC
+{
+    BlueGeneWeb, 
+    AUTHOR      = {{{IBM}}},
+    TITLE       = {{Blue Gene Home Page}},
+    HOWPUBLISHED= {http://www.research.ibm.com/bluegene},
+    YEAR        = {2004},
 }
 
 @MISC
@@ -111,6 +132,15 @@
     ADDRESS     = {San Jose, CA},
     YEAR        = {2003},
     NOTE        = {Available from http://www.llnl.gov/linux/slurm/},
+}
+
+@MISC
+{
+    SlurmWeb,
+    AUTHOR      = {M. Jette and M. Grondona},
+    TITLE       = {{SLURM Home Page}},
+    HOWPUBLISHED= {http://www.llnl.gov/linux/slurm},
+    YEAR        = {2004},
 }
 
 @CONFERENCE
