Modify select/bluegene to honor job's required node list.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -12,6 +12,7 @@ documents those changes that are of interest to users and admins.
     (e.g. Blue Gene)
  -- Fix srun bug when --input, --output and --error are all "none"
  -- Don't schedule jobs for user root if partition is DOWN
+ -- Modify select/bluegene to honor job's required node list
 
 * Changes in SLURM 0.4.0-pre3
 =============================
