--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -1,6 +1,6 @@
 \." $Id$
 .\"
-.TH SRUN "1" "September 2004" "srun 0.4" "slurm components"
+.TH SRUN "1" "November 2004" "srun 0.4" "slurm components"
 .SH "NAME"
 srun \- run parallel jobs
 .SH SYNOPSIS
@@ -236,7 +236,8 @@ the job. By default only errors are displayed.
 .TP
 \fB\-W\fR, \fB\-\-wait\fR=\fIseconds\fR
 Specify how long to wait after the first task terminates before terminating 
-all remaining tasks. The default value is unlimited. This can be useful to 
+all remaining tasks. A value of zero indicates an unlimited wait. 
+The default value is unlimited. This can be useful to 
 insure that a job is terminated in a timely fashion in the event that one 
 or more tasks terminate prematurely.
 .TP
