--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -12,6 +12,7 @@ documents those changes that are of interest to users and admins.
  -- set job's start_time and end_time = now rather than leaving zero if 
     they fail to execute
  -- modify srun to forward SIGTERM
+ -- enable select/bluegene testing for DOWN nodes and switches
 
 * Changes in SLURM 0.4.0-pre4
 =============================
