--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,7 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.4.0-pre6
 =============================
+ -- Add new job reason value "JobHeld" for jobs with priority==0
 
 * Changes in SLURM 0.4.0-pre5
 =============================
