o Do not create an orphaned process group when starting job step    in slurmd session manager.

--- a/branches/slurm-0-3-branch/NEWS
+++ b/branches/slurm-0-3-branch/NEWS
@@ -4,6 +4,7 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 0.3.10
 =========================
  -- Move startup script from "/etc/rc.d/init.d/slurm" to "/etc/init.d/slurm"
+ -- Avoid creating orphaned process group when starting job processes.
 
 * Changes in SLURM 0.3.9
 ========================
