--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -4,6 +4,7 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 0.4.0-pre6
 =============================
  -- Add new job reason value "JobHeld" for jobs with priority==0
+ -- Move startup script from "/etc/rc.d/init.d/slurm" to "/etc/init.d/slurm"
 
 * Changes in SLURM 0.4.0-pre5
 =============================
