Several bugs fixed in BGLb acceptance testing.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,14 +1,18 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.0-pre7
+=============================
+
 * Changes in SLURM 0.4.0-pre6
 =============================
  -- Add new job reason value "JobHeld" for jobs with priority==0
  -- Move startup script from "/etc/rc.d/init.d/slurm" to "/etc/init.d/slurm"
- -- Add new logic to create BGL partitions as needed
  -- Modify prolog/epilog logic in slurmd to accomodate very long run times, 
     on BGL these scripts wait for events that can take a very long time 
     (tens of seconds).
+ -- This code base was used for BGLb acceptance test with pre-defined 
+    BGL blocks.
 
 * Changes in SLURM 0.4.0-pre5
 =============================
