--- a/branches/slurm-0-3-branch/doc/man/man1/srun.1
+++ b/branches/slurm-0-3-branch/doc/man/man1/srun.1
@@ -233,7 +233,14 @@ in the event that one or more tasks terminate prematurely.
 Quit immediately on single SIGINT (Ctrl-C). Use of this option
 disables the status feature normally available when \fBsrun\fR receives 
 a single Ctrl-C and causes \fBsrun\fR to instead immediately terminate the
-running job.
+running job. 
+.TP
+\fB\-q\fR, \fB\-\-disable-status\fR
+Disable the display of task status when srun receives a single SIGINT
+(Ctrl-C). Instead immediately forward the SIGINT to the running job.
+A second Ctrl-C in one second will forcibly terminate the job and
+\fBsrun\fR will immediately exit. May also be set via the environment
+variable SLURM_DISABLE_STATUS.
 .TP
 \fB\-Q\fR, \fB\-\-quiet\fR
 Quiet operation. Suppress informational messages. Errors will still
@@ -606,6 +613,9 @@ SLURM_TIMELIMIT
 .TP
 SLURM_WAIT
 \fB\-W, \-\-wait\fR=\fIseconds\fR
+.TP
+SLURM_DISABLE_STATUS
+\fB\-W, \-\-disable-status\fR
 .PP
 Additionally,
 .B srun
