--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.4.0-pre8
 =============================
+ -- Add logic to create and destroy Bluegene Blocks automatically as needed.
+ -- Update smap man page to include Bluegene configuration commands.
 
 * Changes in SLURM 0.4.0-pre7
 =============================
