--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.0 (production release)
+=============================================
+ -- Specify number of I/O nodes associated with BlueGene partition
+
 * Changes in SLURM 0.4.0-pre9
 =============================
  -- Change in /etc/init.d/slurm for RedHat and Suze compatability
