--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,7 +3,9 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.4.0 (production release)
 =============================================
- -- Specify number of I/O nodes associated with BlueGene partition
+ -- Specify number of I/O nodes associated with BlueGene partition.
+ -- Do not launch a job's tasks if the job is cancelled while its
+    prolog is running (which can be slow on BlueGene).
 
 * Changes in SLURM 0.4.0-pre9
 =============================
